S07P22D107-513 별보러갈래 메인페이지
Former-commit-id: af7c30add145ecd2f3bbc4ee0b0e56386545e251

--- a/ZirraForming/client/public/index.html
+++ b/ZirraForming/client/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
-		<link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+		<link rel="icon" href="./assets/logo.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<meta name="theme-color" content="#000000" />
 		<meta
@@ -15,7 +15,7 @@
 			@import url("https://fonts.googleapis.com/css?family=Black+Han+Sans:400");
 			@import url("https://fonts.googleapis.com/css?family=Black+Han+Sans&display=swap&subset=korean");
 		</style>
-		<title>React App</title>
+		<title>지라포밍</title>
 	</head>
 	<body>
 		<noscript>You need to enable JavaScript to run this app.</noscript>
